<resources>
    <string name="app_name">Panda Saver</string>
    <string name="url_error">Url not found or it is from an IG story</string>
    <string name="media_type_error">Could not recognize media type</string>
    <string name="media_error">Could not find media</string>
    <string name="enter_url">Enter url</string>
    <string name="go">Go</string>
    <string name="download">Download</string>
    <string name="storage_permission_error">Storage permission denied</string>
    <string name="download_message">File will be downloaded in Downloads/PandaSaver</string>
    <string name="download_all">Download All</string>

    <plurals name="files_counter">
        <item quantity="zero">No files found</item>
        <item quantity="one">%d file found</item>
        <item quantity="other">%d files found</item>
    </plurals>
    <string name="caption">Caption</string>
    <string name="hashtags">Hashtags</string>
    <string name="copy">Copy</string>
    <string name="copied">Text Copied</string>
    <string name="paste">Paste</string>
    <string name="empty_clipboard">No URL to paste</string>

<!--    Ads-->
    <string name="ad_id_main_activity_top">ca-app-pub-4736584183202801/9906803976</string>
    <string name="ad_id_main_activity_bottom">ca-app-pub-4736584183202801/5970879651</string>
    <string name="ad_id_result_activity">ca-app-pub-4736584183202801/2028313950</string>
    <string name="ad_id_after_download">ca-app-pub-4736584183202801/4462905601</string>
</resources>